--- a/css-three-column-layout/styles.css
+++ b/css-three-column-layout/styles.css
@@ -11,7 +11,6 @@ body {
 h2 {
   color: white;
   text-align: center;
-  width: 100%;
 }
 
 p {
@@ -28,7 +27,7 @@ p {
 }
 
 .column-div {
-  width: 300px;
+  width: 320px;
   text-align: center;
   color: rgb(255, 255, 255);
   align-items: center;
@@ -45,8 +44,6 @@ p {
 
 .container-two {
   display: flex;
-  gap: 50px;
-  width: 57%;
   align-content: center;
 }
 
@@ -67,5 +64,11 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 350px;
+  width: 320px;
+}
+
+.para {
+  /* border: red solid 1px; */
+  padding-left: 20%;
+  padding-right: 20%;
 }
