--- a/javascript-light-bulb/style.css
+++ b/javascript-light-bulb/style.css
@@ -3,12 +3,19 @@ html {
 }
 
 body {
-  background-color: rgb(254, 249, 241);
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
+}
+
+.body-on {
+  background-color: rgb(254, 249, 241);
+}
+
+.body-off {
+  background-color: rgb(17, 17, 17);
 }
 
 .light-on {
